v.0.2.1 Android saves log of bolus calculations into "Download" folder (permits of "Storage" requested). Winforms program still saves in exe's folder.

--- a/GlucoMan_Mobile/GlucoMan_Mobile.Android/Properties/AndroidManifest.xml
+++ b/GlucoMan_Mobile/GlucoMan_Mobile.Android/Properties/AndroidManifest.xml
@@ -3,4 +3,7 @@
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
 	<application android:label="GlucoMan.Android" android:theme="@style/MainTheme" android:icon="@mipmap/icon"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<!-- the following tags request permission to store files in the user's download folder -->
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
