v.0.2.2.0 Arrotondamento del valore di insulina da fare in frmInsulineCalc. Lettura da altra finestra del valore del glucosio target in frmFoodToHitTargetCarbs. Aggiustamento di parti di frmPredictHypo per farlo funzionare con Android (commentato il codice dell'allarme in WinForms).  Modifiche di dettaglio nelle UI.

--- a/GlucoMan_Forms_Core/GlucoMan_Forms_Core.csproj
+++ b/GlucoMan_Forms_Core/GlucoMan_Forms_Core.csproj
@@ -24,7 +24,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>4</ApplicationRevision>
     <ApplicationVersion>0.5.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -175,5 +175,6 @@
   <Import Project="..\SharedGlucoMan\SharedGlucoMan.projitems" Label="Shared" />
   <Import Project="..\SharedWindows\SharedWindows.projitems" Label="Shared" />
   <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
+  <Import Project="..\SharedWinForms\SharedWinForms.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
