v.0.2.2.2 Refactoring part of alarm in HypoPrediction. Classes CommonFunctions and CommonData are made partial, and contain method with the same name, they are in differente projects that are referenced by different programs (WinForms and Xamarin).

--- a/GlucoMan_Mobile/GlucoMan_Mobile.Android/GlucoMan_Mobile.Android.csproj
+++ b/GlucoMan_Mobile/GlucoMan_Mobile.Android/GlucoMan_Mobile.Android.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <Import Project="..\..\SharedGlucoMan\SharedGlucoMan.projitems" Label="Shared" />
   <Import Project="..\..\SharedAndroid\SharedAndroid.projitems" Label="Shared" />
+  <Import Project="..\..\SharedProject\SharedProject.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
