--- a/GlucoMan_Forms_Core/GlucoMan_Forms_Core.csproj
+++ b/GlucoMan_Forms_Core/GlucoMan_Forms_Core.csproj
@@ -24,8 +24,8 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>4</ApplicationRevision>
-    <ApplicationVersion>0.5.1.%2a</ApplicationVersion>
+    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationVersion>0.2.2.3</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -122,15 +122,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmInsulineCalc.resx">
       <DependentUpon>frmInsulineCalc.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPredictHypo.resx">
       <DependentUpon>frmPredictHypo.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmWeighFood.resx">
       <DependentUpon>frmWeighFood.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -173,8 +176,8 @@
     <Content Include="gamon LegoLogo 256x256.ico" />
   </ItemGroup>
   <Import Project="..\SharedGlucoMan\SharedGlucoMan.projitems" Label="Shared" />
-  <Import Project="..\SharedWindows\SharedWindows.projitems" Label="Shared" />
   <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
+  <Import Project="..\SharedWindows\SharedWindows.projitems" Label="Shared" />
   <Import Project="..\SharedWinForms\SharedWinForms.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
