--- a/GlucoMan_Mobile/GlucoMan_Mobile.Android/Properties/AndroidManifest.xml
+++ b/GlucoMan_Mobile/GlucoMan_Mobile.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="it.ingmonti.glucoman" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0" package="it.ingmonti.glucoman" android:installLocation="auto" android:versionCode="1">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<application android:label="GlucoMan.Android" android:theme="@style/MainTheme" android:icon="@mipmap/icon"></application>
+	<application android:label="GlucoMan.Android" android:theme="@style/MainTheme"></application>
 	<!-- the following tags request permission to store files in the user's download folder -->
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
