--- a/GlucoMan_Mobile/GlucoMan_Mobile/GlucoMan_Mobile.csproj
+++ b/GlucoMan_Mobile/GlucoMan_Mobile/GlucoMan_Mobile.csproj
@@ -3,7 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
-    <Version>0.2.2.2</Version>
+    <Version>0.3.0.0</Version>
+    <Company>Ing. Gabriele MONTI - Forlì - Italia</Company>
+    <Authors>Ing. Gabriele MONTI - Forlì - Italia</Authors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
