--- a/GlucoMan_Mobile/GlucoMan_Mobile/GlucoMan_Mobile.csproj
+++ b/GlucoMan_Mobile/GlucoMan_Mobile/GlucoMan_Mobile.csproj
@@ -3,9 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
-    <Version>0.3.0.0</Version>
-    <Company>Ing. Gabriele MONTI - Forlì - Italia</Company>
+    <Version>0.3.1.0</Version>
+    <Company>-</Company>
     <Authors>Ing. Gabriele MONTI - Forlì - Italia</Authors>
+    <Product>GlucoMan</Product>
+    <Description>A program for the diabetic person</Description>
+    <Copyright>Copyleft by Ing.Gabriele Monti - Forlì Italia - 2020</Copyright>
+    <PackageLicenseExpression>GPL v.2</PackageLicenseExpression>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
