Renamed frmFood from frmFoodData,  renamed the datagrids with name vith prefix view. Trying a listviiew in Xamarin.

--- a/GlucoMan_Forms_Core/GlucoMan_Forms_Core.csproj
+++ b/GlucoMan_Forms_Core/GlucoMan_Forms_Core.csproj
@@ -24,4 +24,8 @@
 
   <Import Project="..\SharedWinForms\SharedWinForms.projitems" Label="Shared" />
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.114.4" />
+  </ItemGroup>
+
 </Project>
