--- a/GlucoMan_Mobile/GlucoMan_Mobile/GlucoMan_Mobile.csproj
+++ b/GlucoMan_Mobile/GlucoMan_Mobile/GlucoMan_Mobile.csproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.114.4" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="Xamarin.Forms.DataGrid" Version="4.8.0" />
