--- a/GlucoMan_Mobile/GlucoMan_Mobile/GlucoMan_Mobile.csproj
+++ b/GlucoMan_Mobile/GlucoMan_Mobile/GlucoMan_Mobile.csproj
@@ -10,6 +10,10 @@
     <Copyright>Copyleft by Ing.Gabriele Monti - Forlì Italia - 2020-21</Copyright>
     <Description>A program for the diabetic person</Description>
     <PackageLicenseExpression>GPL v.2</PackageLicenseExpression>
+    <PackageIcon>Current_Logo_Transparent.png</PackageIcon>
+    <PackageIconUrl />
+    <AssemblyName>GlucoMan</AssemblyName>
+    <ApplicationIcon>Current_Icon_Transparent.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -34,6 +38,13 @@
     <EmbeddedResource Update="GlucoseMeasurement_Page.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\Graphics\Icons\Current_Logo_Transparent.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <Import Project="..\..\SharedGlucoMan\SharedGlucoMan.projitems" Label="Shared" />
