--- a/GlucoMan_Mobile/GlucoMan_Mobile.Android/GlucoMan_Mobile.Android.csproj
+++ b/GlucoMan_Mobile/GlucoMan_Mobile.Android/GlucoMan_Mobile.Android.csproj
@@ -63,7 +63,13 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />
+    <PackageReference Include="sqlite-net">
+      <Version>1.6.292</Version>
+    </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.8.116</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2125" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms.DataGrid">
       <Version>4.8.0</Version>
