--- a/FoglioGlicemiaTerapia/FoglioGlicemiaTerapia.csproj
+++ b/FoglioGlicemiaTerapia/FoglioGlicemiaTerapia.csproj
@@ -12,6 +12,8 @@
   <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
 
   <Import Project="..\SharedGlucoMan\SharedGlucoMan.projitems" Label="Shared" />
+
+  <Import Project="..\SharedWindows\SharedWindows.projitems" Label="Shared" />
   <ItemGroup>
     <PackageReference Include="NetOfficeFw.Core" Version="1.8.1" />
     <PackageReference Include="NetOfficeFw.Excel" Version="1.8.1" />
