Saving in Android working in emulator! Logging with Logger class now operating. Refactoring: brought in this branch the modifications of recent dead branches; changed name to SharedGeneral from SharedProject. Simplified namespaces: now Common comprises a few former namespaces.

--- a/FoglioGlicemiaTerapia/FoglioGlicemiaTerapia.csproj
+++ b/FoglioGlicemiaTerapia/FoglioGlicemiaTerapia.csproj
@@ -9,7 +9,7 @@
 
   <Import Project="..\SharedXOffice\SharedXOffice.projitems" Label="Shared" />
 
-  <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
+  <Import Project="..\SharedGeneral\SharedGeneral.projitems" Label="Shared" />
 
   <Import Project="..\SharedGlucoMan\SharedGlucoMan.projitems" Label="Shared" />
 
