--- a/GlucoMan.Forms/GlucoMan.Forms.csproj
+++ b/GlucoMan.Forms/GlucoMan.Forms.csproj
@@ -18,7 +18,7 @@
     <AssemblyName>GlucoMan</AssemblyName>
   </PropertyGroup>
 
-  <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
+  <Import Project="..\SharedGeneral\SharedGeneral.projitems" Label="Shared" />
 
   <Import Project="..\SharedGlucoMan\SharedGlucoMan.projitems" Label="Shared" />
 
