--- a/ReadFreeStyleLibreData/ReadFreeStyleLibreData.csproj
+++ b/ReadFreeStyleLibreData/ReadFreeStyleLibreData.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-  <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
+  <Import Project="..\SharedGeneral\SharedGeneral.projitems" Label="Shared" />
 
   <Import Project="..\SharedGlucoMan\SharedGlucoMan.projitems" Label="Shared" />
 
