Sqlite working on both platforms, only minimal access functions implemented.

--- a/GlucoMan.Mobile/GlucoMan.Mobile.iOS/GlucoMan.Mobile.iOS.csproj
+++ b/GlucoMan.Mobile/GlucoMan.Mobile.iOS/GlucoMan.Mobile.iOS.csproj
@@ -123,10 +123,13 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="sqlite-net-pcl">
-      <Version>1.8.116</Version>
+    <PackageReference Include="Microsoft.Data.Sqlite.Core">
+      <Version>6.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3">
+      <Version>2.0.7</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
