--- a/GlucoMan.Forms/GlucoMan.Forms.csproj
+++ b/GlucoMan.Forms/GlucoMan.Forms.csproj
@@ -8,12 +8,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>Current_Icon_White.ico</ApplicationIcon>
     <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
-    <AssemblyVersion>0.5.0.0</AssemblyVersion>
-    <FileVersion>0.5.0.0</FileVersion>
+    <AssemblyVersion>0.6.0.0</AssemblyVersion>
+    <FileVersion>0.6.0.0</FileVersion>
     <NeutralLanguage>en-001</NeutralLanguage>
     <PackageIcon>gamon LegoLogo scritta con piastra bianca 256x256.png</PackageIcon>
     <Authors>Ing.Gabriele Monti - Forlì - Italia</Authors>
-    <Version>0.5.0.0</Version>
+    <Version>0.6.0.0</Version>
     <PackageId>GlucoMan</PackageId>
     <AssemblyName>GlucoMan</AssemblyName>
   </PropertyGroup>
@@ -25,6 +25,15 @@
   <Import Project="..\SharedWindows\SharedWindows.projitems" Label="Shared" />
 
   <Import Project="..\SharedWinForms\SharedWinForms.projitems" Label="Shared" />
+
+  <ItemGroup>
+    <Compile Remove="frmGlucose - Copia.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="frmGlucose.Designer.cs.OLD" />
+    <None Remove="frmGlucose.resx.OLD" />
+  </ItemGroup>
 
   <ItemGroup>
     <Content Include="Current_Icon_White.ico" />
