--- a/ConciliateData/ConciliateData.csproj
+++ b/ConciliateData/ConciliateData.csproj
@@ -14,7 +14,8 @@
   <Import Project="..\SharedWindows\SharedWindows.projitems" Label="Shared" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.3" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.5" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
