--- a/GlucoMan.Mobile/GlucoMan.Mobile.Android/GlucoMan.Mobile.Android.csproj
+++ b/GlucoMan.Mobile/GlucoMan.Mobile.Android/GlucoMan.Mobile.Android.csproj
@@ -64,13 +64,15 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite.Core">
-      <Version>6.0.3</Version>
+      <Version>6.0.5</Version>
     </PackageReference>
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3">
-      <Version>2.0.7</Version>
+      <Version>2.1.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.7.3</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2478" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
