Completed frmMeal in Winforms and MealsPage in Xamarin app. Added the showing of error log in both applications(new page accessible from Miscellaneous page). Added Accuracy management in Winforms (encaplsulated into a class, still to be changed to be used also in Xamarin)

--- a/FoglioGlicemiaTerapia/FoglioGlicemiaTerapia.csproj
+++ b/FoglioGlicemiaTerapia/FoglioGlicemiaTerapia.csproj
@@ -20,5 +20,8 @@
     <PackageReference Include="NetOfficeFw.Word" Version="1.8.1" />
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GlucoMan.Forms\GlucoMan.Forms.csproj" />
+  </ItemGroup>
 
 </Project>
