--- a/GlucoMan.Mobile/GlucoMan.Mobile/GlucoMan.Mobile.csproj
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/GlucoMan.Mobile.csproj
@@ -99,6 +99,9 @@
     <EmbeddedResource Update="InjectionSitePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="ShowTextPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
   <Import Project="..\..\SharedAndroid\SharedAndroid.projitems" Label="Shared" />
