--- a/GlucoMan.Mobile/GlucoMan.Mobile.Android/Properties/AndroidManifest.xml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile.Android/Properties/AndroidManifest.xml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="0.7.0.0" package="it.ingmonti.glucoman.mobile" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
-	<application android:label="GlucoMan.Mobile.Android" android:theme="@style/MainTheme" android:icon="@mipmap/icon"
-               android:requestLegacyExternalStorage="true">"</application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="0.7.0.1" package="it.ingmonti.glucoman.mobile" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="29" android:targetSdkVersion="30" />
+	<application android:label="GlucoMan.Mobile.Android" android:theme="@style/MainTheme" android:icon="@mipmap/icon" android:requestLegacyExternalStorage="true">"</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
