Added in Main "Page" a button to start a New Meal. Added storage of sum of CHO and retriieval in Mael Page. Added append of insuline parameters to a log file.Added pages for Injections (still nothing inside..)Changhed the way a Food is loaded in FoodsPaga based on the fact tah an IdFood is passed .  Fix in foods search (to decide if it work fine..)

--- a/GlucoMan.Mobile/GlucoMan.Mobile/GlucoMan.Mobile.csproj
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/GlucoMan.Mobile.csproj
@@ -73,8 +73,8 @@
     <Compile Update="MiscellaneousFunctionsPage.xaml.cs">
       <DependentUpon>MiscellaneousFunctionsPage.xaml</DependentUpon>
     </Compile>
-    <Compile Update="InjectionSitePage.xaml.cs">
-      <DependentUpon>InjectionSitePage.xaml</DependentUpon>
+    <Compile Update="InjectionsPage.xaml.cs">
+      <DependentUpon>InjectionsPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="FoodsPage.xaml.cs">
       <DependentUpon>FoodsPage.xaml</DependentUpon>
@@ -103,7 +103,7 @@
     <EmbeddedResource Update="MiscellaneousFunctionsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="InjectionSitePage.xaml">
+    <EmbeddedResource Update="InjectionsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="FoodsPage.xaml">
