--- a/GlucoMan.Mobile/GlucoMan.Mobile.Android/GlucoMan.Mobile.Android.csproj
+++ b/GlucoMan.Mobile/GlucoMan.Mobile.Android/GlucoMan.Mobile.Android.csproj
@@ -54,6 +54,7 @@
     <EnableLLVM>false</EnableLLVM>
     <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
     <BundleAssemblies>false</BundleAssemblies>
+    <AndroidLinkTool>r8</AndroidLinkTool>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
