--- a/GlucoMan.Mobile/GlucoMan.Mobile.Android/Properties/AndroidManifest.xml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="0.7.3.0" package="it.ingmonti.glucoman.mobile" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="0.7.3.1" package="it.ingmonti.glucoman" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="28" android:targetSdkVersion="30" />
-	<application android:label="GlucoMan.Mobile.Android" android:theme="@style/MainTheme" android:icon="@mipmap/icon" android:requestLegacyExternalStorage="true">"</application>
+	<application android:label="GlucoMan" android:theme="@style/MainTheme" android:icon="@mipmap/icon" android:requestLegacyExternalStorage="true">"</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
