--- a/ConciliateData/ConciliateData.csproj
+++ b/ConciliateData/ConciliateData.csproj
@@ -7,9 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.8" />
-    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.0-preview.7.22376.2" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.1-pre20220822172036" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2515" />
   </ItemGroup>
+  <Import Project="..\SharedGlucoMan\SharedGlucoMan.projitems" Label="Shared" />
+  <Import Project="..\SharedGeneral\SharedGeneral.projitems" Label="Shared" />
+  <Import Project="..\SharedWindows\SharedWindows.projitems" Label="Shared" />
 
 </Project>
