--- a/DiabetesRecords/DiabetesRecords.csproj
+++ b/DiabetesRecords/DiabetesRecords.csproj
@@ -5,7 +5,7 @@
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <UserSecretsId>2f5adc4c-9160-4f48-b8e4-853166f954a3</UserSecretsId>
     <ApplicationIcon>Current_Icon_Transparent.ico</ApplicationIcon>
-    <Version>0.9.0.0</Version>
+    <Version>0.9.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -18,10 +18,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.8" />
-    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.0-preview.7.22376.2" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.1-pre20220822172036" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2515" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="DiabetesRecords_MainPage.xaml.cs">
+      <DependentUpon>DiabetesRecords_MainPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <Import Project="..\SharedGeneral\SharedGeneral.projitems" Label="Shared" />
