--- a/GlucoMan.Mobile/GlucoMan.Mobile.iOS/GlucoMan.Mobile.iOS.csproj
+++ b/GlucoMan.Mobile/GlucoMan.Mobile.iOS/GlucoMan.Mobile.iOS.csproj
@@ -124,10 +124,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite.Core">
-      <Version>6.0.8</Version>
+      <Version>7.0.0-preview.7.22376.2</Version>
     </PackageReference>
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3">
-      <Version>2.1.0</Version>
+      <Version>2.1.1-pre20220822172036</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.7.3</Version>
