--- a/FoglioGlicemiaTerapia/FoglioGlicemiaTerapia.csproj
+++ b/FoglioGlicemiaTerapia/FoglioGlicemiaTerapia.csproj
@@ -15,10 +15,10 @@
 
   <Import Project="..\SharedWindows\SharedWindows.projitems" Label="Shared" />
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.0-preview.7.22376.2" />
-    <PackageReference Include="NetOfficeFw.Excel" Version="1.8.1" />
-    <PackageReference Include="NetOfficeFw.Word" Version="1.8.1" />
-    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.1-pre20220822172036" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.3" />
+    <PackageReference Include="NetOfficeFw.Excel" Version="1.9.2" />
+    <PackageReference Include="NetOfficeFw.Word" Version="1.9.2" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GlucoMan.Forms\GlucoMan.Forms.csproj" />
