--- a/GlucoMan.Mobile/GlucoMan.Mobile/GlucoMan.Mobile.csproj
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/GlucoMan.Mobile.csproj
@@ -45,11 +45,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.0-preview.7.22376.2" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.3" />
     <PackageReference Include="SimMetrics.Net" Version="1.0.5" />
-    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.1-pre20220822172036" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2515" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.4" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2545" />
   </ItemGroup>
 
   <ItemGroup>
@@ -59,8 +59,8 @@
      <Compile Update="FoodToHitTargetCarbsPage.xaml.cs">
       <DependentUpon>FoodToHitTargetCarbsPage.xaml</DependentUpon>
     </Compile>
-    <Compile Update="GlucoseMeasurementPage.xaml.cs">
-      <DependentUpon>GlucoseMeasurementPage.xaml</DependentUpon>
+    <Compile Update="GlucoseMeasurementsPage.xaml.cs">
+      <DependentUpon>GlucoseMeasurementsPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="HypoPredictionPage.xaml.cs">
       <DependentUpon>HypoPredictionPage.xaml</DependentUpon>
