--- a/GlucoMan.Mobile/GlucoMan.Mobile/GlucoMan.Mobile.csproj
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/GlucoMan.Mobile.csproj
@@ -7,13 +7,15 @@
     <ApplicationIcon>Current_Icon_White.ico</ApplicationIcon>
     <PackageId>GlucoMan</PackageId>
     <Version>0.7.3.4</Version>
-    <NeutralLanguage>en-150</NeutralLanguage>
+    <NeutralLanguage>en</NeutralLanguage>
     <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
     <Authors>Ing.Gabriele MONTI - Forlì - Italia</Authors>
     <Copyright>Copyleft GPL v.2</Copyright>
     <PackageProjectUrl>www.ingmonti.it/GlucoMan</PackageProjectUrl>
     <PackageIcon>Current_Logo_White.png</PackageIcon>
     <Company>ingmonti.it</Company>
+    <Title>GlucoMan, Glucose Management for diabetics</Title>
+    <Description>GlucoMan, Glucose Management for diabetics</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
