Cambiato TabbedPage in ContentPage in InjectionsPage, l'errore runtime è sparito.
Modifiche cosmetiche in FoodToHitTargetCarbsPage, AboutPage, AppShell

--- a/GlucoMan.Maui/GlucoMan.Maui.csproj
+++ b/GlucoMan.Maui/GlucoMan.Maui.csproj
@@ -111,6 +111,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Remove="InjectionsPage_BROKEN.xaml.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Remove="InjectionsPage_BROKEN.xaml" />
 	  <MauiXaml Remove="MainPage_INIZIALE.xaml" />
 	</ItemGroup>
 
